fix code button z-index

--- a/preset.css
+++ b/preset.css
@@ -77,7 +77,7 @@ span {
   }
 
   div[style="position: absolute; z-index: 1000; top: 0px; right: 0px; opacity: 0.5;"] {
-    z-index: 10 !important;
+    z-index: 1 !important;
   }
 
   .roam-block-container,
@@ -1454,7 +1454,7 @@ span {
   }
 
   div[style="position: absolute; z-index: 1000; top: 0px; right: 0px; opacity: 0.5;"] {
-    z-index: 10 !important;
+    z-index: 1 !important;
   }
 
   .roam-block-container,
